<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/background"
                android:foreground="?android:attr/selectableItemBackground"
>


    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/song_item_song_cover"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/music_note"/>

    <TextView
            android:id="@+id/song_item_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/song_item_song_cover"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/song_name_placeholder"
            android:layout_toStartOf="@id/song_item_song_time"/>

    <TextView
            android:id="@+id/song_item_song_artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/song_item_song_name"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/song_item_song_cover"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/artist_name_placeholder"
            android:layout_toStartOf="@id/song_item_song_time"
            android:textColor="@android:color/darker_gray"/>


    <TextView
            android:id="@+id/song_item_song_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:text="@string/_01_00"/>


</RelativeLayout>